crates/ruff_python_parser/tests/snapshots/valid_syntax@non_rebound_comprehension_variable.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/non_rebound_comprehension_variable.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..27,
        body: Suite {
            range: 0..27,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..26,
                        value: ListComp(
                            ExprListComp {
                                node_index: NodeIndex(None),
                                range: 0..26,
                                elt: Named(
                                    ExprNamed {
                                        node_index: NodeIndex(None),
                                        range: 1..7,
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 1..2,
                                                id: Name("a"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 6..7,
                                                value: Int(
                                                    0,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                generators: [
                                    Comprehension {
                                        range: 8..25,
                                        node_index: NodeIndex(None),
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 12..13,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        iter: Call(
                                            ExprCall {
                                                node_index: NodeIndex(None),
                                                range: 17..25,
                                                func: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 17..22,
                                                        id: Name("range"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                arguments: Arguments {
                                                    range: 22..25,
                                                    node_index: NodeIndex(None),
                                                    args: [
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 23..24,
                                                                value: Int(
                                                                    0,
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                    keywords: [],
                                                },
                                            },
                                        ),
                                        ifs: [],
                                        is_async: false,
                                    },
                                ],
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
